# Prompt-Ops_V2

./: README.md
demo/: README.md  run_showcase.py  showcase.py
pre/: PROMPT-OPS-BUILD-SPEC.md  PROMPT-OPS-PRD.docx
prompt-ops/: .env.example  README.md  pyproject.toml
prompt-ops/dashboard/: app.py
prompt-ops/prompt_ops/: __init__.py  __main__.py  client.py  config.py  decorator.py  evaluator.py  monitor.py  optimizer.py  orchestrator.py  router.py  telemetry.py  temperature.py
prompt-ops/prompt_ops/database/: __init__.py  connection.py  models.py
prompt-ops/tests/: test_decorator.py  test_evaluator.py  test_router.py
